[workspace]
members = [ "deft-reversi-cli",
    "deft-reversi-engine", "deft-reversi-learn",
    "deft-reversi-web"
]

resolver = "2"

[profile.release]
lto = "fat"
opt-level = 3
panic = 'abort'
codegen-units = 1


# ビルド時に環境変数を使って設定する
# 例: 
#     RUSTFLAGS="-Ctarget-cpu=native" cargo build -p deft-reversi-console
#     $env:RUSTFLAGS="-Ctarget-cpu=native -Cpanic=abort"