[package]
name = "deft-reversi-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deft_reversi_engine = { path = "../deft-reversi-engine" } 
wasm-bindgen = {version = "0.2.87", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.72"
wasm-bindgen-futures = "0.4.45"
getrandom = { version = "0.2.15", features = ["js"] }
rand = "0.8.5"

[lib]
crate-type=["cdylib"]

